--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -42,4 +42,4 @@ jobs:
         coverage run -m pytest
         coverage report
     - name: Profile code
-      run: python -m cProfile src/utils/test_users.py
+      run: python -m cProfile src/test/test_users.py
